--- a/Resource/template/admin/config.twig
+++ b/Resource/template/admin/config.twig
@@ -8,49 +8,84 @@
  * file that was distributed with this source code.
  */
 #}
-{% extends '@admin/default_frame.twig' %}
+{#
+[商品管理]-[商品レビュー]-[編集]画面
+#}
+
+{% extends '@admin/styleguide_frame.twig' %}
 
 {% set menus = ['product', 'product_review'] %}
 
 {% block title %}{{ 'plugin.admin.product.management.title'|trans }}{% endblock %}
 {% block sub_title %}{{ 'plugin.admin.product.management.title.sub'|trans }}{% endblock %}
 
-{% form_theme form '@admin/Form/bootstrap_3_horizontal_layout.html.twig' %}
+{% form_theme form '@admin/Form/bootstrap_4_horizontal_layout.html.twig' %}
 
 {% block main %}
+
     <form method="post" action="{{ url('plugin_ProductReview_config') }}">
         {{ form_widget(form._token) }}
-        <div class="row" id="aside_wrap">
-            <div class="col-md-9">
-                <div class="box">
-                    <div class="box-header">
-                        <h3 class="box-title">{{ 'plugin.admin.product_review.setting'|trans }}</h3>
-                    </div><!-- /.box-header -->
-                    <div class="box-body form-horizontal">
-                        <div class="form-group">
-                            {{ form_label(form.review_max) }}
-                            <div class="col-sm-9 col-lg-10">
-                                {{ form_widget(form.review_max) }}
-                                {{ form_errors(form.review_max) }}
-                            </div>
-                        </div>
-                    </div><!-- /.box-body -->
-                </div><!-- /.box -->
-            </div><!-- /.col -->
-
-            <div class="col-md-3">
-                <div class="col_inner" id="aside_column">
-                    <div class="box no-header">
-                        <div class="box-body">
-                            <div class="row text-center">
-                                <div class="col-sm-6 col-sm-offset-3 col-md-12 col-md-offset-0">
-                                    <button class="btn btn-primary btn-block btn-lg" type="submit">{{ 'plugin.admin.configration'|trans }}</button>
+        <div class="c-contentsArea__cols">
+            <div class="c-contentsArea__primaryCol">
+                <div class="c-primaryCol">
+                    <div class="card rounded border-0 mb-4">
+                        <div class="card-header">
+                            <div class="row">
+                                <div class="col-8">
+                                    <div class="d-inline-block" data-toggle="tooltip" data-placement="top"
+                                         title="Tooltip">
+                                    <span class="card-title">
+                                        {{ 'plugin.admin.product_review.config.form'|trans }}
+                                    </span>
+                                        <i class="fa fa-question-circle fa-lg ml-1"></i>
+                                    </div>
+                                </div>
+                                <div class="col-4 text-right">
+                                    <a data-toggle="collapse" href="#basicConfig" aria-expanded="false"
+                                       aria-controls="basicConfig">
+                                        <i class="fa fa-angle-up fa-lg"></i>
+                                    </a>
                                 </div>
                             </div>
-                        </div><!-- /.box-body -->
-                    </div><!-- /.box -->
+                        </div>
+
+                        <div class="collapse show ec-cardCollapse" id="basicConfig">
+                            <div class="card-body">
+                                <div class="row mb-2">
+                                    <div class="col-3">
+                                        <label>{{ 'plugin.admin.product_review.config.input.limit'|trans }}</label>
+                                    </div>
+                                    <div class="col">
+                                        {{ form_widget(form.review_max) }}
+                                        {{ form_errors(form.review_max) }}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div><!-- /.col -->
+            </div>
+        </div>
+
+        <div class="c-conversionArea">
+            <div class="c-conversionArea__container">
+                <div class="row justify-content-between align-items-center">
+                    <div class="col-6">
+                        <div class="c-conversionArea__leftBlockItem">
+                            <a class="c-beseLink" href="{{ url('admin_store_plugin') }}"><i class="fa fa-backward" aria-hidden="true"></i>
+                                <span>オーナーズストアプラグイン一覧</span></a>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="row align-items-center justify-content-end">
+                            <div class="col-auto">
+                                <button class="btn btn-ec-conversion px-5" type="submit">{{ 'plugin.admin.configration'|trans }}</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </form>
+
 {% endblock %}
